// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AuthenticationProviderInformation />  > renders correctly according to Login method > should not render change password button when password is not used 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly according to Login method > should render change password button when password is used 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
      <div
        class="responsive-flex-box-columns-rows password-container"
      >
        <div
          class="editor-title-and-value responsive-flex-box-columns-rows"
        >
          <h3
            class="subtitle-size"
          >
            profileInformation.password
          </h3>
        </div>
        <div
          class="edit-buttons"
        >
          <div
            class="edit-buttons-container"
          >
            <button
              class="Button-module_button__1msFE button_hds-button__2A0je Button-module_primary__2LfKB button_hds-button--primary__2NVvO"
              data-testid="change-password-button"
              type="button"
            >
              <span
                class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
              >
                profileInformation.changePassword
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="responsive-flex-box-columns-rows password-container"
      >
        <div
          class="editor-title-and-value responsive-flex-box-columns-rows"
        >
          <div>
            <h3
              class="subtitle-size"
            >
              mfa.title
            </h3>
            <span
              class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_statusLabelWithIcon__5lKVk status-label_hds-status-label--with-icon__3bHf6"
            >
              <span
                aria-hidden="true"
                class="StatusLabel-module_statusLabelIcon__2SAou status-label_hds-status-label-icon__3K58a"
              >
                <svg
                  aria-hidden="true"
                  aria-label="alert-circle"
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM13 16V18H11V16H13ZM13 6V14H11V6H13Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              mfa.disabled
            </span>
          </div>
        </div>
        <div
          class="edit-buttons"
        >
          <div
            class="edit-buttons-container"
          >
            <button
              class="Button-module_button__1msFE button_hds-button__2A0je Button-module_primary__2LfKB button_hds-button--primary__2NVvO"
              data-testid="enable-totp-button"
              type="button"
            >
              <span
                class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
              >
                mfa.enable
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly according to MFA setting > should render "disable MFA button" when MFA is already configured 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
      <div
        class="responsive-flex-box-columns-rows password-container"
      >
        <div
          class="editor-title-and-value responsive-flex-box-columns-rows"
        >
          <h3
            class="subtitle-size"
          >
            profileInformation.password
          </h3>
        </div>
        <div
          class="edit-buttons"
        >
          <div
            class="edit-buttons-container"
          >
            <button
              class="Button-module_button__1msFE button_hds-button__2A0je Button-module_primary__2LfKB button_hds-button--primary__2NVvO"
              data-testid="change-password-button"
              type="button"
            >
              <span
                class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
              >
                profileInformation.changePassword
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="responsive-flex-box-columns-rows password-container"
      >
        <div
          class="editor-title-and-value responsive-flex-box-columns-rows"
        >
          <div>
            <h3
              class="subtitle-size"
            >
              mfa.title
            </h3>
            <span
              class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_success__2BfdX status-label_hds-status-label--success__3jiST StatusLabel-module_statusLabelWithIcon__5lKVk status-label_hds-status-label--with-icon__3bHf6"
            >
              <span
                aria-hidden="true"
                class="StatusLabel-module_statusLabelIcon__2SAou status-label_hds-status-label-icon__3K58a"
              >
                <svg
                  aria-hidden="true"
                  aria-label="check-circle"
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM16.5 8L18 9.5L10.5 17L6 12.5L7.5 11L10.5 14L16.5 8Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              mfa.dateEnabled
               
              01.1.2023
            </span>
          </div>
        </div>
        <div
          class="edit-buttons"
        >
          <div
            class="edit-buttons-container"
          >
            <button
              class="Button-module_button__1msFE button_hds-button__2A0je Button-module_secondary__1nABp button_hds-button--secondary__1NOWS"
              data-testid="disable-totp-button"
              type="button"
            >
              <div
                aria-hidden="true"
                class="Button-module_icon__O-h7R button_hds-icon__17j8Z"
              >
                <svg
                  aria-hidden="true"
                  aria-label="cross-circle"
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM15 7.5L16.5 9L13.5 12L16.5 15L15 16.5L12 13.5L9 16.5L7.5 15L10.5 12L7.5 9L9 7.5L12 10.5L15 7.5Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <span
                class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
              >
                mfa.disable
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly according to MFA setting > should render enable MFA button 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
      <div
        class="responsive-flex-box-columns-rows password-container"
      >
        <div
          class="editor-title-and-value responsive-flex-box-columns-rows"
        >
          <h3
            class="subtitle-size"
          >
            profileInformation.password
          </h3>
        </div>
        <div
          class="edit-buttons"
        >
          <div
            class="edit-buttons-container"
          >
            <button
              class="Button-module_button__1msFE button_hds-button__2A0je Button-module_primary__2LfKB button_hds-button--primary__2NVvO"
              data-testid="change-password-button"
              type="button"
            >
              <span
                class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
              >
                profileInformation.changePassword
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="responsive-flex-box-columns-rows password-container"
      >
        <div
          class="editor-title-and-value responsive-flex-box-columns-rows"
        >
          <div>
            <h3
              class="subtitle-size"
            >
              mfa.title
            </h3>
            <span
              class="StatusLabel-module_statusLabel__3R2J2 status-label_hds-status-label__1L8YI StatusLabel-module_statusLabelWithIcon__5lKVk status-label_hds-status-label--with-icon__3bHf6"
            >
              <span
                aria-hidden="true"
                class="StatusLabel-module_statusLabelIcon__2SAou status-label_hds-status-label-icon__3K58a"
              >
                <svg
                  aria-hidden="true"
                  aria-label="alert-circle"
                  class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_s__2WGWe icon_hds-icon--size-s__2Lkik"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4ZM13 16V18H11V16H13ZM13 6V14H11V6H13Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              mfa.disabled
            </span>
          </div>
        </div>
        <div
          class="edit-buttons"
        >
          <div
            class="edit-buttons-container"
          >
            <button
              class="Button-module_button__1msFE button_hds-button__2A0je Button-module_primary__2LfKB button_hds-button--primary__2NVvO"
              data-testid="enable-totp-button"
              type="button"
            >
              <span
                class="Button-module_label__a4np1 button_hds-button__label__2EQa-"
              >
                mfa.enable
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly when AMR is helsinkiAccountAMR > should render helsinki account information as expected based on config 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.helsinkiAccount
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`<AuthenticationProviderInformation />  > renders correctly when AMR is tunnistusSuomifiAMR > should render suomi.fi information as expected based on config 1`] = `
<div>
  <section
    class="content-box profile-section"
  >
    <div
      class="flex-box-columns"
    >
      <div
        class="editor-description-container"
      >
        <h2>
          profileInformation.loginAndAuthentication
        </h2>
        <span>
          identityProvider.tunnistusSuomifi
        </span>
      </div>
    </div>
  </section>
</div>
`;
